@@ -31,6 +31,8 @@ https://github.com/elastic/beats/compare/v5.0.0-beta1...master[Check the HEAD di
 
 *Metricbeat*
 
+- Fix default configuration file on Windows to not enabled the `load` metricset. {pull}2632[2632]
+
 *Packetbeat*
 
 *Topbeat*
